--- a/scripts/R38_GF_RNAseq.Rmd
+++ b/scripts/R38_GF_RNAseq.Rmd
@@ -1158,10 +1158,15 @@ print("Pairwise overlap count of common leading edge genes:")
 print(overlap_matrix)
 ```
 
-
 ### heatmap
 
 ```{r}
+# Define custom colors for the tissue annotation to be yellow and green
+ann_colors <- list(
+    tissue = c(small_intestine = "yellow", large_intestine = "green"),
+    treatment = color_palette
+)
+
 # --- Create a Heatmap of Common Leading Edge Genes ---
 
 # First, get a single unique vector of all the common leading edge genes
@@ -1267,10 +1272,12 @@ interferon_gamma_genes <- common_leading_edge_genes[["HALLMARK_INTERFERON_GAMMA_
 unique_interferon_genes <- union(interferon_alpha_genes, interferon_gamma_genes)
 ```
 
+### interferon_genes
 
 ```{r}
 # Prepare the data matrix for the heatmap (genes on rows, samples on columns)
 heatmap_matrix <- combined_tidy_counts %>%
+  filter(gene %in% unique_interferon_genes ) %>% 
   dplyr::select(gene, sample_name, count) %>%
   pivot_wider(names_from = sample_name, values_from = count) %>%
   column_to_rownames("gene")
@@ -1281,24 +1288,272 @@ annotation_col <- combined_tidy_counts %>%
   distinct() %>%
   column_to_rownames("sample_name")
 
+my_colors_rd_bu <- colorRampPalette(rev(brewer.pal(n = 11, name = "RdBu")))(100)
+
+ann_colors <- list(
+    tissue = c(`Small Intestine` = "yellow", `Large Intestine` = "green"),
+    treatment = color_palette
+)
+
 # Generate the heatmap
 pheatmap(
   heatmap_matrix,
-  main = "Expression of Common Leading Edge Genes",
+  main = "Expression of Common Leading Edge Genes in the interferon pathways",
   annotation_col = annotation_col,
-  color = viridis(100),         # Use a colorblind-friendly palette
+  annotation_colors = ann_colors,
+  color = my_colors_rd_bu,         # Use a colorblind-friendly palette
   scale = "row",                # Scale genes to have mean 0 and SD 1
   show_colnames = TRUE,
   show_rownames = TRUE,
   cluster_cols = TRUE,          # Cluster samples based on similarity
   cluster_rows = TRUE,          # Cluster genes based on similarity
-  filename = '../data/R38_leading_genes_heatmap.pdf',
+  filename = '../data/R38_leading_genes_heatmap.png',
   fontsize_row = 8, # Directly save the plot as a PNG
   width = 10, # Specify width in inches
-  height = 11 # Specify height in inches
+  height = 8 # Specify height in inches
 )
+
 ```
 
+### top and bottom genes heatmap
+
+```{r}
+# --- Step 1: Identify Top and Bottom 200 Genes ---
+
+# A helper function to get top/bottom genes from a results object
+get_top_bottom_genes <- function(shrunken_results) {
+  # Convert to a tibble, arrange by fold change, and get row names
+  df <- as.data.frame(shrunken_results) %>%
+    rownames_to_column("ensembl_id") %>%
+    as_tibble() %>%
+    filter(!is.na(log2FoldChange)) %>% # Ensure no NA values
+    arrange(desc(log2FoldChange))
+  
+  # Get top 100 (most upregulated) and bottom 100 (most downregulated)
+  top_genes <- head(df, 100) %>% pull(ensembl_id)
+  bottom_genes <- tail(df, 100) %>% pull(ensembl_id)
+  
+  return(c(top_genes, bottom_genes))
+}
+
+get_top_genes <- function(shrunken_results) {
+  # Convert to a tibble, arrange by fold change, and get row names
+  df <- as.data.frame(shrunken_results) %>%
+    rownames_to_column("ensembl_id") %>%
+    as_tibble() %>%
+    filter(!is.na(log2FoldChange)) %>% # Ensure no NA values
+    arrange(desc(log2FoldChange))
+  
+  # Get top 100 (most upregulated) 
+  top_genes <- head(df, 100) %>% pull(ensembl_id)
+  
+  return(c(top_genes))
+}
+
+# Apply the function to both contrast results
+# IMPORTANT: Replace the mock objects with your actual results objects
+genes_si <- get_top_genes(shrunken_si_contrast1)
+genes_li <- get_top_genes(shrunken_li_contrast1)
+
+# Combine the lists and get a single unique vector of genes to plot
+unique_genes_to_plot <- unique(c(genes_si, genes_li))
+
+# --- Step 2: Extract Normalized Counts for These Genes ---
+
+# Get normalized counts from both dds objects
+# IMPORTANT: Replace the mock objects with your actual dds objects
+counts_si <- counts(dds_si, normalized = TRUE)
+counts_li <- counts(dds_li, normalized = TRUE)
+
+# Filter the count matrices to include only the selected genes
+counts_si_filtered <- counts_si[rownames(counts_si) %in% unique_genes_to_plot, ]
+counts_li_filtered <- counts_li[rownames(counts_li) %in% unique_genes_to_plot, ]
+
+# Combine them into a single matrix
+combined_counts <- cbind(counts_si_filtered, counts_li_filtered)
+
+# --- Step 3: Prepare Data and Annotations for the Heatmap ---
+
+# Create the annotation data frame for the columns (samples)
+annotation_col_si <- as.data.frame(colData(dds_si)[, c("tissue", "treatment")])
+annotation_col_li <- as.data.frame(colData(dds_li)[, c("tissue", "treatment")])
+annotation_col <- rbind(annotation_col_si, annotation_col_li)
+
+
+# --- Step 4: Generate the Heatmap ---
+
+# Define a colorblind-friendly Red-White-Blue color palette
+my_colors <- colorRampPalette(rev(brewer.pal(n = 11, name = "RdBu")))(100)
+
+
+# Generate the heatmap
+pheatmap(
+  combined_counts,
+  main = "Top 100 upregulated genes from SI and LI (Contrast 1)",
+  annotation_col = annotation_col,
+   annotation_colors = ann_colors, # Use the custom colors
+  #labels_row = final_gene_labels, # Use symbols as labels
+  color = my_colors,
+  scale = "row",                  # Scale genes to have mean 0 and SD 1
+  cluster_cols = TRUE,            # Cluster columns (samples) based on similarity
+  cluster_rows = TRUE,            # Cluster genes by expression pattern
+  show_rownames = TRUE,           # Show the gene labels
+  fontsize_row = 6,               # Adjust font size to fit more labels
+  filename = "../data/heatmap_top_100_genes.png",
+  width = 7,
+  height = 7
+)
+
+```
+### treatment effects
+
+```{r}
+# --- Step 1: Select Genes of Interest from Key GSEA Pathways ---
+# This approach focuses on genes from pathways that you know are behaving differently.
+
+
+
+# Extract the significant pathway names from each dataframe
+list_of_gsea_dfs <- lapply(list_of_dfs, function(df) {
+  df %>%
+    filter(padj < 0.05) 
+})
+
+# Define the pathways that tell the most interesting story
+pathways_of_interest <- c(
+  "HALLMARK_E2F_TARGETS", # Proliferation
+  "HALLMARK_INTERFERON_ALPHA_RESPONSE", # Immune response
+  "HALLMARK_OXIDATIVE_PHOSPHORYLATION" # Metabolism
+)
+
+# Extract all unique leading-edge genes from these pathways across all 4 contrasts
+genes_to_plot <- list_of_gsea_dfs %>%
+  map_dfr(~ .x %>% filter(pathway %in% pathways_of_interest)) %>%
+  pull(leadingEdge) %>%
+  unlist() %>%
+  unique()
+```
+
+
+```{r}
+# --- Step 2: Create a Matrix of Log2 Fold Changes ---
+# The matrix will have genes on rows and contrasts on columns.
+
+# List your shrunken results dataframes in the correct order
+list_of_shrunken_dfs <- list(
+  LI_Colonization = shrunken_li_contrast1,
+  LI_Sucrose = shrunken_li_contrast2,
+  SI_Colonization = shrunken_si_contrast1,
+  SI_Sucrose = shrunken_si_contrast2
+)
+
+# Map over the list to extract the LFC for each gene, creating a single dataframe
+processed_lfc_list <- list_of_shrunken_dfs %>%
+  map(~ as.data.frame(.x) %>%
+        rownames_to_column("ensembl_version") %>%
+        # Ensure log2FoldChange is not NA
+        filter(!is.na(log2FoldChange)) %>%
+        # Clean the ensembl ID by removing the version
+        mutate(ENSEMBL = str_remove(ensembl_version, "\\..*")) %>%
+        # Add gene symbols
+        mutate(SYMBOL = mapIds(org.Mm.eg.db,
+                               keys = ENSEMBL,
+                               column = "SYMBOL",
+                               keytype = "ENSEMBL",
+                               multiVals = "first")) %>%
+        # Remove genes that didn't map to a symbol and filter for our genes of interest
+        filter(!is.na(SYMBOL) & SYMBOL %in% genes_to_plot) %>%
+        # In case one symbol maps to multiple Ensembl IDs, take the one with the largest absolute LFC
+        group_by(SYMBOL) %>%
+        slice_max(abs(log2FoldChange), n = 1, with_ties = FALSE) %>%
+        ungroup() %>%
+        dplyr::select(SYMBOL, log2FoldChange)) 
+
+# Now, join the list of processed dataframes together using purrr::reduce
+lfc_df_joined <- purrr::reduce(processed_lfc_list, full_join, by = "SYMBOL")
+
+# Finally, clean up the column names and set the row names to create the final matrix
+lfc_matrix <- lfc_df_joined %>%
+  `colnames<-`(c("SYMBOL", names(list_of_shrunken_dfs))) %>%
+  column_to_rownames("SYMBOL")
+```
+
+
+```{r}
+# --- Step 3: Generate the LFC Heatmaps (Split by Tissue and Paneled by Pathway) ---
+
+# Define a colorblind-friendly Red-White-Blue color palette
+my_colors <- colorR-ampPalette(rev(brewer.pal(n = 7, name = "RdBu")))(100)
+
+# Create a mapping of genes to their primary pathway for annotation
+# Get the unique leading edge genes for each pathway
+genes_prolif <- list_of_gsea_dfs %>% map_dfr(~.x %>% filter(pathway == "HALLMARK_E2F_TARGETS")) %>% pull(leadingEdge) %>% unlist() %>% unique()
+genes_immune <- list_of_gsea_dfs %>% map_dfr(~.x %>% filter(pathway == "HALLMARK_INTERFERON_ALPHA_RESPONSE")) %>% pull(leadingEdge) %>% unlist() %>% unique()
+genes_metab <- list_of_gsea_dfs %>% map_dfr(~.x %>% filter(pathway == "HALLMARK_OXIDATIVE_PHOSPHORYLATION")) %>% pull(leadingEdge) %>% unlist() %>% unique()
+
+# Create the row annotation dataframe
+annotation_row <- data.frame(
+  Pathway = case_when(
+    rownames(lfc_matrix) %in% genes_prolif ~ "Proliferation",
+    rownames(lfc_matrix) %in% genes_immune ~ "Immune Response",
+    rownames(lfc_matrix) %in% genes_metab ~ "Metabolism",
+    TRUE ~ "Other"
+  )
+)
+rownames(annotation_row) <- rownames(lfc_matrix)
+
+# Order the annotation and the main matrix by Pathway for clean paneling
+annotation_row <- annotation_row %>% arrange(Pathway)
+lfc_matrix_ordered <- lfc_matrix[rownames(annotation_row), ]
+
+# Calculate the positions for the gaps between panels
+gaps_row <- table(annotation_row$Pathway) %>% cumsum() %>% head(-1)
+
+# Define colors for the row annotation
+ann_colors <- list(
+  Pathway = c(Proliferation = "#E41A1C", `Immune Response` = "#377EB8", Metabolism = "#4DAF4A")
+)
+
+# Split the ordered LFC matrix into SI and LI
+lfc_matrix_si <- lfc_matrix_ordered %>% dplyr::select(contains("SI"))
+lfc_matrix_li <- lfc_matrix_ordered %>% dplyr::select(contains("LI"))
+
+# Generate the Small Intestine heatmap with panels
+pheatmap(
+  lfc_matrix_si,
+  main = "Small Intestine: Treatment Effects (LFC)",
+  color = my_colors,
+  annotation_row = annotation_row,
+  annotation_colors = ann_colors,
+  cluster_cols = FALSE,
+  cluster_rows = FALSE, # Clustering is now manual
+  gaps_row = gaps_row,  # Add gaps between pathway panels
+  show_rownames = TRUE,
+  fontsize_row = 8,
+  filename = "../data/LFC_heatmap_SI_effects_paneled.png",
+  width = 7,
+  height = 12
+)
+
+# Generate the Large Intestine heatmap with panels
+pheatmap(
+  lfc_matrix_li,
+  main = "Large Intestine: Treatment Effects (LFC)",
+  color = my_colors,
+  annotation_row = annotation_row,
+  annotation_colors = ann_colors,
+  cluster_cols = FALSE,
+  cluster_rows = FALSE, # Clustering is now manual
+  gaps_row = gaps_row,  # Add gaps between pathway panels
+  show_rownames = TRUE,
+  fontsize_row = 8,
+  filename = "../data/LFC_heatmap_LI_effects_paneled.png",
+  width = 7,
+  height = 12
+)
+
+
+```
 
 ## the enrichment plots
 
